--- a/ad_python.ipynb
+++ b/ad_python.ipynb
@@ -2,12 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3dcaa237",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, git!\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Hello, git!\")"
+    "print(\"Hello, git!\")\n",
+    "for i in range(1,10):\n",
+    "    print(\"Hello\")"
    ]
   }
  ],
@@ -18,7 +37,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.9"
   }
  },
